--- a/archlinux/img/pacman.i686.conf
+++ b/archlinux/img/pacman.i686.conf
@@ -36,20 +36,15 @@ Architecture = <ARCHITECTURE>
 CheckSpace
 #VerbosePkgLists
 
-# PGP signature checking
-# NOTE: None of this will work without running `pacman-key --init` first.
-# The compiled in default is equivalent to the following line. This requires
-# you to locally sign and trust packager keys using `pacman-key` for them to be
-# considered valid.
-#SigLevel    = Required DatabaseOptional
-#LocalFileSigLevel = Optional
+# By default, pacman accepts packages signed by keys that its local keyring
+# trusts (see pacman-key and its man page), as well as unsigned packages.
+SigLevel    = Required DatabaseOptional
+LocalFileSigLevel = Optional
 #RemoteFileSigLevel = Required
-# If you wish to check signatures but avoid local sign and trust issues, use
-# the following line. This will treat any key imported into pacman's keyring as
-# trusted.
-#SigLevel = Optional TrustAll
-# For now, off by default unless you read the above.
-SigLevel = Never
+
+# NOTE: You must run `pacman-key --init` before first using pacman; the local
+# keyring can then be populated with the keys of all official Arch Linux
+# packagers with `pacman-key --populate archlinux`.
 
 #
 # REPOSITORIES
@@ -74,18 +69,23 @@ SigLevel = Never
 # repo name header and Include lines. You can add preferred servers immediately
 # after the header, and they will be used before the default mirrors.
 
+#[testing]
+#Include = /etc/pacman.d/mirrorlist
+
 [core]
-Server = http://mirror.archlinuxarm.org/$arch/$repo/
+Server = https://mirror.archlinux32.org/$arch/$repo
 
 [extra]
-Server = http://mirror.archlinuxarm.org/$arch/$repo/
+Server = https://mirror.archlinux32.org/$arch/$repo
+
+#[community-testing]
+#Include = /etc/pacman.d/mirrorlist
 
 [community]
-Server = http://mirror.archlinuxarm.org/$arch/$repo/
+Server = https://mirror.archlinux32.org/$arch/$repo
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
 #[custom]
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
-
