--- a/archlinux/Dockerfile-devel-arm
+++ b/archlinux/Dockerfile-devel-arm
@@ -4,6 +4,6 @@ RUN [ "cross-build-start" ]
 RUN pacman --needed --noconfirm -Syu base base-devel && \
     rm -Rf "/var/cache" && \
     rm -Rf "/var/lib/pacman/sync" && \
-    rm -Rf "/var/log" && \
+    rm -Rf "/var/log/*" && \
     install -m 0755 -d "/var/cache/pacman/pkg" 
 RUN [ "cross-build-end" ]
