--- a/archlinux/Dockerfile-devel-x86_64
+++ b/archlinux/Dockerfile-devel-x86_64
@@ -5,5 +5,5 @@ RUN pacman -Sy && pacman -Sqg base base-devel | sort -u > /tmp/packages1 && \
     pacman --needed --noconfirm -Syu $(comm -23 /tmp/packages1 /tmp/packages2) && \
     rm -Rf "/var/cache" && \
     rm -Rf "/var/lib/pacman/sync" && \
-    rm -Rf "/var/log" && \
+    rm -Rf "/var/log/*" && \
     install -m 0755 -d "/var/cache/pacman/pkg" 
