Updating dehydrated-alpine

--- a/dehydrated-alpine/Dockerfile
+++ b/dehydrated-alpine/Dockerfile
@@ -4,14 +4,14 @@ LABEL maintainer="Marc Mettke <marc@itmettke.de>"
 ENV VERSION="v0.6.5"
 ENV DEHYDRATED_URL="https://raw.githubusercontent.com/lukas2511/dehydrated/${VERSION}/dehydrated"
 ENV CLOUDFLARE_HOOK_URL="https://github.com/mettke/letsencrypt-cloudflare-hook"
-ENV DEPENDENCIES="bash openssl curl python py-cffi py-cryptography py-dnspython py-enum34 py-future py-idna py-ipaddress py-ndg_httpsclient py2-asn1 py2-cparser py-openssl py-requests py-six py-pip"
+ENV DEPENDENCIES="bash openssl curl python py-cffi py-cryptography py-dnspython py-future py-idna py-ipaddress py-ndg_httpsclient py-openssl py-requests py-six py-pip"
 ENV BUILD_DEPENDENCIES="gcc py-pip python2-dev linux-headers musl-dev libffi-dev openssl-dev"
 
 COPY crontab /var/spool/cron/crontabs/root
 COPY config /etc/dehydrated/config
 
 RUN apk --no-cache add ${DEPENDENCIES} && \
-    pip install tld wheel
+    pip install asn1 cparser enum34 tld wheel
 RUN apk --no-cache add git && \
     wget ${DEHYDRATED_URL} \
         --directory-prefix /usr/local/bin/ && \
