--- a/dehydrated-alpine/Dockerfile
+++ b/dehydrated-alpine/Dockerfile
@@ -2,9 +2,9 @@ FROM alpine:latest
 LABEL maintainer="Marc Mettke <marc@itmettke.de>"
 
 ENV VERSION="v0.6.5"
-ENV DEHYDRATED_URL="https://raw.githubusercontent.com/lukas2511/dehydrated/${VERSION}/dehydrated"
+ENV DEHYDRATED_URL="https://raw.githubusercontent.com/dehydrated-io/dehydrated/${VERSION}/dehydrated"
 ENV CLOUDFLARE_HOOK_URL="https://github.com/mettke/letsencrypt-cloudflare-hook"
-ENV DEPENDENCIES="bash openssl curl python py-cffi py-cryptography py-dnspython py-future py-idna py-ipaddress py-ndg_httpsclient py-openssl py-requests py-six py-pip"
+ENV DEPENDENCIES="bash openssl curl python2 py-cffi py-cryptography py-dnspython py-future py-idna py-ipaddress py-ndg_httpsclient py-openssl py-requests py-six py-pip"
 ENV BUILD_DEPENDENCIES="gcc py-pip python2-dev linux-headers musl-dev libffi-dev openssl-dev"
 
 COPY crontab /var/spool/cron/crontabs/root
